# data-structures-generic-library-c

./: README.md
datastructures/: CMakeLists.txt  build.project.bat  build.project.sh
datastructures/include/: datastructures.h
datastructures/src/binarySearchTree/: CMakeLists.txt  README.md  binarySearchTree.c  binarySearchTree.h  testBinarySearchTree.c
datastructures/src/doublyList/: CMakeLists.txt  README.md  README.txt  doublyList.c  doublyList.h  testDoublyList.c
datastructures/src/heap/: CMakeLists.txt  README.md  heap.c  heap.h  testHeap.c
datastructures/src/queue/: CMakeLists.txt  README.txt  queue.c  queue.h  testQueue.c
datastructures/src/singlyList/: CMakeLists.txt  README.txt  singlyList.c  singlyList.h  testSinglyList.c
datastructures/src/stack/: CMakeLists.txt  README.md  README.txt  stack.c  stack.h  testStack.c
